feat: initialize frontend with React app structure
- Add manifest.json for PWA support
- Create robots.txt for search engine directives
- Implement App.css for styling the application
- Add initial App.test.tsx for testing the App component
- Develop main App.tsx component with agent and message handling
- Set up index.css for global styles
- Create index.tsx as the entry point for the React application
- Include logo.svg for branding
- Implement reportWebVitals.ts for performance tracking
- Set up testing environment with setupTests.ts
- Configure TypeScript with tsconfig.json
- Add axios as a dependency in package.json

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,22 @@ Thumbs.db
 # Deep Agents file system (stored research/context)
 .deepagents/
 agent_files/
+
+# Node.js (for root node_modules if present)
+node_modules/
+package-lock.json
+
+# Azure Functions
+local.settings.json
+.funcignore
+
+# Test files
+test_results/
+.coverage
+htmlcov/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
